# waypoint_navigation

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  RESULTS.md  project-context.md  ros2-navigation.mdc
docs/: ros2-launch-files.md  ros2-transforms.md
documentation/: README.md  ros2-interpolation.md  ros2-messages.md  ros2-parameters.md  ros2-quality-of-service.md  ros2-visualization.md
results/csv/: traj_circle.csv  traj_hybrid.csv  traj_scurve.csv  traj_straight.csv
trajectory_nav/: IMPLEMENTATION_COMPLETE.md  README.md  package.xml  setup.cfg  setup.py  test.py
trajectory_nav/config/: trajectory_circle.yaml  trajectory_curve.yaml  trajectory_hybrid.yaml  trajectory_scurve.yaml  trajectory_straight.yaml
trajectory_nav/launch/: trajectory_system.launch.py
trajectory_nav/rviz/: trajectory_config.rviz
trajectory_nav/scripts/: algo_doc.md  algo_testing.py  generate_plots.py
trajectory_nav/trajectory_nav/: __init__.py  obstacle_detector.py  trajectory_controller.py  trajectory_generator.py  trajectory_monitor.py
